test/invalid/idl/exposed.webidl
interface UnexposedInterface {};
partial interface UnexposedInterface {};
[LegacyNoInterfaceObject]
interface NoObjectInterface {};
namespace UnexposedNamespace {};
partial namespace UnexposedNamespace {};
